force-app/main/default/objects/ElectionVoter__c/ElectionVoter__c.object-meta.xml
<CustomObject>
    <label>Election Voter</label>
    <nameField>
        <label>Election Voter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Election Voters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>