force-app/main/default/objects/ElectionVoter__c/fields/Election__c.field-meta.xml
<CustomField>
    <fullName>Election__c</fullName>
    <label>Election</label>
    <referenceTo>Election__c</referenceTo>
    <relationshipLabel>Election Voters</relationshipLabel>
    <relationshipName>ElectionVoters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>