force-app/main/default/objects/ElectionVoter__c/fields/ElectionVoterUnique__c.field-meta.xml
<CustomField>
    <fullName>ElectionVoterUnique__c</fullName>
    <label>ElectionVoterUnique</label>
    <length>38</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>