force-app/main/default/objects/ElectionVoter__c/fields/PersonalVotingPasswordHash__c.field-meta.xml
<CustomField>
    <fullName>PersonalVotingPasswordHash__c</fullName>
    <label>Personal Voting Password Hash</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>