force-app/main/default/objects/ElectionVoter__c/fields/Voter__c.field-meta.xml
<CustomField>
    <fullName>Voter__c</fullName>
    <label>Voter</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only a person account can register to vote.</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Election Voters</relationshipLabel>
    <relationshipName>ElectionVoters</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>